docs/api/0.5.0/tasks/github.md
---
sidebarDepth: 2
editLink: false
---
# GitHub Tasks
---
A collection of tasks for interacting with GitHub.

Note that the tasks in this collection require a Prefect Secret called `"GITHUB_ACCESS_TOKEN"`
containing a valid GitHub Access Token.
 ## CreateGitHubPR
 <div class='class-sig' id='prefect-tasks-github-prs-creategithubpr'><p class="prefect-sig">class </p><p class="prefect-class">prefect.tasks.github.prs.CreateGitHubPR</p>(repo=None, title=None, body=None, head=None, base=None, token_secret="GITHUB_ACCESS_TOKEN", **kwargs)<span class="source"><a href="https://github.com/PrefectHQ/prefect/blob/master/src/prefect/tasks/github/prs.py#L10">[source]</a></span></div>

Task for opening / creating new GitHub Pull Requests using the v3 version of the GitHub REST API.

**Args**:     <ul class="args"><li class="args">`repo (str, optional)`: the name of the repository to open the issue in; must be provided in the         form `organization/repo_name`; can also be provided to the `run` method     </li><li class="args">`title (str, optional)`: the title of the issue to create; can also be provided to the `run` method     </li><li class="args">`body (str, optional)`: the contents of the issue; can also be provided to the `run` method     </li><li class="args">`head (str, optional)`: the name of the branch where your changes are implemented; can also         be provided to the `run` method     </li><li class="args">`base (str, optional)`: the name of the branch you want the changes pulled into; can also         be provided to the `run` method     </li><li class="args">`token_secret (str, optional)`: the name of the Prefect Secret containing your GitHub Access Token;         defaults to "GITHUB_ACCESS_TOKEN"     </li><li class="args">`**kwargs (Any, optional)`: additional keyword arguments to pass to the standard Task init method</li></ul>

|methods: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|
|:----|
 | <div class='method-sig' id='prefect-tasks-github-prs-creategithubpr-run'><p class="prefect-class">prefect.tasks.github.prs.CreateGitHubPR.run</p>(repo=None, title=None, body=None, head=None, base=None)<span class="source"><a href="https://github.com/PrefectHQ/prefect/blob/master/src/prefect/tasks/github/prs.py#L46">[source]</a></span></div>
<p class="methods">Run method for this Task. Invoked by calling this Task after initialization within a Flow context, or by using `Task.bind`.<br><br>**Args**:     <ul class="args"><li class="args">`repo (str, optional)`: the name of the repository to open the issue in; must be provided in the         form `organization/repo_name`; defaults to the one provided at initialization     </li><li class="args">`title (str, optional)`: the title of the issue to create; defaults to the one provided at initialization     </li><li class="args">`body (str, optional)`: the contents of the issue; defaults to the one provided at initialization     </li><li class="args">`head (str, optional)`: the name of the branch where your changes are implemented;         defaults to the one provided at initialization     </li><li class="args">`base (str, optional)`: the name of the branch you want the changes pulled into;         defaults to the one provided at initialization</li></ul>**Raises**:     <ul class="args"><li class="args">`ValueError`: if a `repo` was never provided     </li><li class="args">`HTTPError`: if the POST request returns a non-200 status code</li></ul>**Returns**:     <ul class="args"><li class="args">None</li></ul></p>|

---
<br>

 ## OpenGitHubIssue
 <div class='class-sig' id='prefect-tasks-github-issues-opengithubissue'><p class="prefect-sig">class </p><p class="prefect-class">prefect.tasks.github.issues.OpenGitHubIssue</p>(repo=None, title=None, body=None, labels=None, token_secret="GITHUB_ACCESS_TOKEN", **kwargs)<span class="source"><a href="https://github.com/PrefectHQ/prefect/blob/master/src/prefect/tasks/github/issues.py#L10">[source]</a></span></div>

Task for opening / creating new GitHub issues using the v3 version of the GitHub REST API.

**Args**:     <ul class="args"><li class="args">`repo (str, optional)`: the name of the repository to open the issue in; must be provided in the         form `organization/repo_name`; can also be provided to the `run` method     </li><li class="args">`title (str, optional)`: the title of the issue to create; can also be provided to the `run` method     </li><li class="args">`body (str, optional)`: the contents of the issue; can also be provided to the `run` method     </li><li class="args">`labels (List[str], optional)`: a list of labels to apply to the newly opened issues; can also         be provided to the `run` method     </li><li class="args">`token_secret (str, optional)`: the name of the Prefect Secret containing your GitHub Access Token;         defaults to "GITHUB_ACCESS_TOKEN"     </li><li class="args">`**kwargs (Any, optional)`: additional keyword arguments to pass to the standard Task init method</li></ul>

|methods: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|
|:----|
 | <div class='method-sig' id='prefect-tasks-github-issues-opengithubissue-run'><p class="prefect-class">prefect.tasks.github.issues.OpenGitHubIssue.run</p>(repo=None, title=None, body=None, labels=None)<span class="source"><a href="https://github.com/PrefectHQ/prefect/blob/master/src/prefect/tasks/github/issues.py#L42">[source]</a></span></div>
<p class="methods">Run method for this Task. Invoked by calling this Task after initialization within a Flow context, or by using `Task.bind`.<br><br>**Args**:     <ul class="args"><li class="args">`repo (str, optional)`: the name of the repository to open the issue in; must be provided in the         form `organization/repo_name`; defaults to the one provided at initialization     </li><li class="args">`title (str, optional)`: the title of the issue to create; defaults to the one provided at initialization     </li><li class="args">`body (str, optional)`: the contents of the issue; defaults to the one provided at initialization     </li><li class="args">`labels (List[str], optional)`: a list of labels to apply to the newly opened issues; defaults to the ones provided         at initialization</li></ul>**Raises**:     <ul class="args"><li class="args">`ValueError`: if a `repo` was never provided     </li><li class="args">`HTTPError`: if the POST request returns a non-200 status code</li></ul>**Returns**:     <ul class="args"><li class="args">None</li></ul></p>|

---
<br>

 ## GetRepoInfo
 <div class='class-sig' id='prefect-tasks-github-repos-getrepoinfo'><p class="prefect-sig">class </p><p class="prefect-class">prefect.tasks.github.repos.GetRepoInfo</p>(repo=None, info_keys=None, token_secret="GITHUB_ACCESS_TOKEN", **kwargs)<span class="source"><a href="https://github.com/PrefectHQ/prefect/blob/master/src/prefect/tasks/github/repos.py#L10">[source]</a></span></div>

Task for retrieving GitHub repository information using the v3 version of the GitHub REST API.

**Args**:     <ul class="args"><li class="args">`repo (str, optional)`: the name of the repository to open the issue in; must be provided in the         form `organization/repo_name` or `user/repo_name`; can also be provided to the `run` method     </li><li class="args">`info_keys (List[str], optional)`: a list of repo attributes to pull (e.g., `["stargazers_count", "subscribers_count"]`).         A full list of available keys can be found in the official [GitHub documentation](https://developer.github.com/v3/repos/)     </li><li class="args">`token_secret (str, optional)`: the name of the Prefect Secret containing your GitHub Access Token;         defaults to "GITHUB_ACCESS_TOKEN"     </li><li class="args">`**kwargs (Any, optional)`: additional keyword arguments to pass to the standard Task init method</li></ul>

|methods: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|
|:----|
 | <div class='method-sig' id='prefect-tasks-github-repos-getrepoinfo-run'><p class="prefect-class">prefect.tasks.github.repos.GetRepoInfo.run</p>(repo=None, info_keys=None)<span class="source"><a href="https://github.com/PrefectHQ/prefect/blob/master/src/prefect/tasks/github/repos.py#L36">[source]</a></span></div>
<p class="methods">Run method for this Task. Invoked by calling this Task after initialization within a Flow context, or by using `Task.bind`.<br><br>**Args**:     <ul class="args"><li class="args">`repo (str, optional)`: the name of the repository to open the issue in; must be provided in the         form `organization/repo_name`; defaults to the one provided at initialization     </li><li class="args">`info_keys (List[str], optional)`: a list of repo attributes to pull (e.g., `["stargazers_count", "subscribers_count"]`).         A full list of available keys can be found in the official [GitHub documentation](https://developer.github.com/v3/repos/)</li></ul>**Raises**:     <ul class="args"><li class="args">`ValueError`: if a `repo` was never provided     </li><li class="args">`HTTPError`: if the GET request returns a non-200 status code</li></ul>**Returns**:     <ul class="args"><li class="args">`dict`: dictionary of the requested information</li></ul></p>|

---
<br>


<p class="auto-gen">This documentation was auto-generated from commit <a href='https://github.com/PrefectHQ/prefect/commit/n/a'>n/a</a> </br>by Prefect 0.5.0 on March 29, 2019 at 17:39 UTC</p>
